helm-tools/kyverno/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: Enforce # Or Audit
  background: true
  rules:
    - name: check-privileged
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "NO POD RUN AS PRIVILEGED"
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(privileged): false
